Fixed memory corruption in exponential.h.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ project(arithmetica C)
 
 add_subdirectory(src/library)
 
-option(ENABLE_TESTS "Build tests" OFF)
+option(ENABLE_TESTS "Build tests" ON)
 
 if (ENABLE_TESTS)
     add_subdirectory(src/basic_math_operations/src/library)
