--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ enable_language(ASM_NASM)
 
 add_subdirectory(src/library)
 
-option(ENABLE_TESTS "Build tests" ON)
+option(ENABLE_TESTS "Build tests" OFF)
 
 if (ENABLE_TESTS)
     add_subdirectory(src/basic_math_operations/src/library)
