--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@ build/
 *.out
 *.exe
 .vscode/
+src/python-module/build/
+src/python-module/dist/
+src/python-module/*.egg-info/
+*.egg-info/
+wheels.sh
+dist/
