--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,38 @@
-name: "Make libarithmetica."
+name: "Build"
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
     branches: [ main ]
   schedule:
     - cron: '18 13 * * 6'
 
 jobs:
+  determine_version:
+    name: Determine the major.minor.patch version.
+    runs-on: ubuntu-latest
+    permissions:
+        actions: write
+        contents: write
+        security-events: write
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - name: Git Version
+      id: version
+      uses: codacy/git-version@2.7.1
+    - name: Use the version
+      run: |
+        echo ${{ steps.version.outputs.version }} > version.txt
+        g++ src/python-module/fix-version.cpp -O3
+        ./a.out version.txt
+        echo ${{ steps.version.outputs.version }}
+    - uses: actions/upload-artifact@v3
+      with:
+        name: version-info
+        path: version.txt
+
   make-linux:
     name: Make libarithmetica for Linux.
     runs-on: ubuntu-latest
@@ -45,6 +69,10 @@ jobs:
       with:
         name: linux-build
         path: linux-build/libarithmetica-linux.zip
+    - uses: actions/upload-artifact@v3
+      with:
+        name: linux-bmo
+        path: build/src/basic_math_operations/libbasic_math_operations.a
 
   make-windows:
     name: Make libarithmetica-windows.a
@@ -81,11 +109,93 @@ jobs:
       with:
         name: windows-build
         path: build/src/library/libarithmetica-windows.a
+    - uses: actions/upload-artifact@v3
+      with:
+        name: windows-bmo
+        path: build/src/basic_math_operations/libbasic_math_operations.a
+
+  make-wheel-windows:
+    needs:
+      - make-windows
+    runs-on: windows-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          path: dist/artifacts
+      - name: Move version info
+        run: |
+          cp dist/artifacts/version-info/version.txt version.txt
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.10.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install wheel
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          path: dist/artifacts
+      - name: Build wheel
+        run: |
+          python setup.py bdist_wheel
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: windows-whl
+          path: dist/*.whl
+  make-wheel-linux:
+    needs:
+      - make-linux
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Git Version
+        id: version
+        uses: codacy/git-version@2.7.1
+      - name: Use the version
+        run: |
+          echo ${{ steps.version.outputs.version }} > version.txt
+          g++ src/python-module/fix-version.cpp -O3
+          ./a.out version.txt
+          echo ${{ steps.version.outputs.version }}
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.10.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install wheel
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          path: dist/artifacts
+      - name: Build wheel
+        run: |
+          python setup.py bdist_wheel
+          pip3 install auditwheel
+          auditwheel repair dist/*.whl --plat manylinux2014_x86_64
+          rm dist/*linux_x86_64.whl
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: linux-whl
+          path: wheelhouse/*.whl
 
   release:
     needs:
       - make-linux
+      - make-wheel-linux
       - make-windows
+      - make-wheel-windows
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -129,3 +239,71 @@ jobs:
           asset_path: dist/artifacts/windows-build/libarithmetica-windows.a
           asset_name: libarithmetica-windows.a
           asset_content_type: application/octet-stream
+            - name: Get Linux and Windows wheel name
+        run: |
+          cd dist/artifacts/linux-whl/
+          echo "LINUX_WHEEL=$(ls *.whl)" >> $GITHUB_ENV
+          cd ../windows-whl/
+          echo "WIN_WHEEL=$(ls *.whl)" >> $GITHUB_ENV
+          cd ../..
+      - name: Upload wheel for Linux.
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/artifacts/linux-whl/${{ env.LINUX_WHEEL }}
+          asset_name: ${{ env.LINUX_WHEEL }}
+          asset_content_type: application/octet-stream
+      - name: Upload wheel for Windows.
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: dist/artifacts/windows-whl/${{ env.WIN_WHEEL }}
+          asset_name: ${{ env.WIN_WHEEL }}
+          asset_content_type: application/octet-stream
+    
+    pypi-upload:
+    needs:
+      - make-wheel-linux
+      - make-wheel-windows
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          path: dist/artifacts
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: '3.10.x'
+      - name: Git Version
+        id: version
+        uses: codacy/git-version@2.7.1
+      - name: Use the version
+        run: |
+          echo ${{ steps.version.outputs.version }} > version.txt
+          g++ src/python-module/fix-version.cpp -O3
+          ./a.out version.txt
+          echo ${{ steps.version.outputs.version }}
+      - name: Install Twine and create SDIST
+        run: |
+          sudo apt-get install rename -y
+          python -m pip install twine
+          python setup.py sdist --formats=gztar
+          mkdir -p build/dist/ && mv dist/artifacts build/dist
+          mv build/dist/artifacts/windows-whl/* dist/
+          mv build/dist/artifacts/linux-whl/* dist/
+          echo "hash=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+      - name: Run Twine
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+        run: |
+          twine upload --verbose dist/*
