--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -157,6 +157,10 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Download artifacts
+        uses: actions/download-artifact@v2
+        with:
+          path: dist/artifacts
       - name: Git Version
         id: version
         uses: codacy/git-version@2.7.1
