--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   analyze:
-    name: Make test.cpp.
+    name: Test arithmetica on Ubuntu.
     runs-on: ubuntu-latest
     permissions:
       actions: write
@@ -30,9 +30,18 @@ jobs:
       with:
         persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
         fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
-    - run: |
+    - name: Install valgrind.
+      run: |
+        sudo apt-get update
+        sudo apt-get install valgrind
+    - name: Clone basic_math_operations.
+      run: |
         git submodule update --init --recursive
+    - name: Compile tests.
+      run: |
         cmake --no-warn-unused-cli -DENABLE_TESTS=ON -DCMAKE_EXPORT_COMPILE_COMMANDS:BOOL=TRUE -DCMAKE_BUILD_TYPE:STRING=Release -DCMAKE_C_COMPILER:FILEPATH=/usr/bin/gcc -DCMAKE_CXX_COMPILER:FILEPATH=/usr/bin/g++ -S . -B build -G "Unix Makefiles"
         cmake --build build --config Release --target all -j 10 --
         chmod +x build/src/tests/tests
-        ./build/src/tests/tests
+    - name: Run tests using valgrind.
+    - run: |
+        valgrind ./build/src/tests/tests
