--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -43,5 +43,5 @@ jobs:
         cmake --build build --config Release --target all -j 10 --
         chmod +x build/src/tests/tests
     - name: Run tests using valgrind.
-    - run: |
+      run: |
         valgrind ./build/src/tests/tests
