--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,7 +38,7 @@ jobs:
     - name: Clone basic_math_operations.
       run: |
         git submodule update --init --recursive
-    - name: Compile tests.
+    - name: Compile tests in debug.
       run: |
         cmake --no-warn-unused-cli -DENABLE_TESTS=ON -DCMAKE_BUILD_TYPE=Debug -S . -B build -G "Unix Makefiles"
         cmake --build build --config Debug --target all -j 10 --
@@ -46,6 +46,11 @@ jobs:
     - name: Run tests using valgrind.
       run: |
         valgrind --error-exitcode=1 --leak-check=full --track-origins=yes ./build/src/tests/tests
+    - name: Compile tests in release.
+      run: |
+        cmake --no-warn-unused-cli -DENABLE_TESTS=ON -DCMAKE_BUILD_TYPE=Release -S . -B build -G "Unix Makefiles"
+        cmake --build build --config Release --target all -j 10 --
+        chmod +x build/src/tests/tests
     - name: Benchmark
       run: |
         ./build/src/tests/tests --benchmark
