--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -1,4 +1,4 @@
-name: "Test memory leaks and benchmark."
+name: "Benchmark"
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
 
 jobs:
   on-linux-valgrind:
-    name: Test arithmetica on Ubuntu.
+    name: Benchmark arithmetica on Ubuntu.
     runs-on: ubuntu-latest
     permissions:
       actions: write
@@ -30,19 +30,18 @@ jobs:
       with:
         persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
         fetch-depth: 0 # otherwise, there would be errors pushing refs to the destination repository.
-    - name: Install valgrind and libcurl.
+    - name: Install libcurl.
       run: |
         sudo apt-get update
-        sudo apt-get install valgrind
         sudo apt-get install libcurl4-openssl-dev
     - name: Clone basic_math_operations.
       run: |
         git submodule update --init --recursive
-    - name: Compile tests in debug.
+    - name: Compile tests in release.
       run: |
-        cmake --no-warn-unused-cli -DENABLE_TESTS=ON -DCMAKE_BUILD_TYPE=Debug -S . -B build -G "Unix Makefiles"
-        cmake --build build --config Debug --target all -j 10 --
+        cmake --no-warn-unused-cli -DBUILD_BMO=ON -DENABLE_TESTS=ON -DCMAKE_BUILD_TYPE=Release -S . -B build -G "Unix Makefiles"
+        cmake --build build --config Release --target all -j 10 --
         chmod +x build/src/tests/tests
-    - name: Run tests using valgrind.
+    - name: Benchmark
       run: |
-        valgrind --error-exitcode=1 --leak-check=full --track-origins=yes ./build/src/tests/tests
+        ./build/src/tests/tests --benchmark
