Turned off benchmarks by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ add_subdirectory(src/library)
 
 option(BUILD_BMO "Build basic math operations" ON)
 option(ENABLE_TESTS "Build tests" OFF)
-option(ENABLE_BENCHMARK "Build benchmark" ON)
+option(ENABLE_BENCHMARK "Build benchmark" OFF)
 
 if(BUILD_BMO)
     add_subdirectory(src/basic_math_operations/src/library)
