--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,7 +40,7 @@ jobs:
         git submodule update --init --recursive
     - name: Compile tests in debug.
       run: |
-        cmake --no-warn-unused-cli -DENABLE_TESTS=ON -DCMAKE_BUILD_TYPE=Debug -S . -B build -G "Unix Makefiles"
+        cmake --no-warn-unused-cli -DBUILD_BMO=ON -DENABLE_TESTS=ON -DCMAKE_BUILD_TYPE=Debug -S . -B build -G "Unix Makefiles"
         cmake --build build --config Debug --target all -j 10 --
         chmod +x build/src/tests/tests
     - name: Run tests using valgrind.
