--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -55,4 +55,4 @@ jobs:
         echo "UID=$(cat uid.txt)" >> $GITHUB_ENV
     - name: Benchmark
       run: |
-        ./build/src/benchmark/benchmark --unique-identifier ${{ env.UID }} --upload ${{ secrets.PRIVATE_UPLOAD_SERVER }} ${{ secrets.PRIVATE_UPLOAD_KEY }} ${{ secrets.PRIVATE_UPLOAD_NUMBER }}
+        ./build/src/benchmark/benchmark --no-live-updates --unique-identifier ${{ env.UID }} --upload ${{ secrets.PRIVATE_UPLOAD_SERVER }} ${{ secrets.PRIVATE_UPLOAD_KEY }} ${{ secrets.PRIVATE_UPLOAD_NUMBER }}
