1. Fixed some memory leaks 2. Several changes
Co-authored-by: Aarav Malani <aarav.malani@gmail.com>

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -10,3 +10,8 @@ target_link_libraries(tests arithmetica)
 target_link_libraries(tests basic_math_operations)
 
 target_include_directories(tests PRIVATE "../library")
+
+add_executable(tests2 test2.cpp)
+target_link_libraries(tests2 arithmetica)
+target_link_libraries(tests2 basic_math_operations)
+target_include_directories(tests2 PRIVATE "../library")
